# ImageRecognition

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
sources/: Defines.h  Image.cpp  Image.h  ImageRecognationError.cpp  ImageRecognitionError.cpp  ImageRecognitionError.h  ImageRecognitionService.cpp  ImageRecognitionService.h  ImageStorage.cpp  ImageStorage.h
tests/: ImageRecognitionServiceTest.h  ImageStorageTest.h  ImageTest.h  TestFramework.h  tests.cpp
tests_service/: Sample_1.xml
